# frosty_engine

./: Cargo.toml  LICENSE  README.md
basic_3d/: Cargo.toml
basic_3d/src/: camera.rs
crates/basic_2d/: Cargo.toml
crates/basic_2d/src/: collider.rs  sprite.rs
crates/basic_3d/src/: camera.rs  lib.rs  mesh.rs  render.rs
crates/basic_3d/src/shaders/: mesh.wgsl
crates/engine_core/: Cargo.toml
crates/engine_core/src/: app.rs  entity.rs  input.rs  lib.rs  query.rs  scene.rs  schedule.rs  spawner.rs  system.rs  thread.rs
crates/engine_core/src/input/: action.rs
crates/engine_core/src/render_core/: layout.rs  mod.rs  open_pipeline.rs  shader_node.rs
crates/frosty_alloc/src/: access.rs  allocator.rs  frosty_box.rs  handle.rs  lib.rs
crates/render/: Cargo.toml
crates/render/src/: color.rs  lib.rs  material.rs  mesh.rs  post_process.rs  scheduled_pipeline.rs  shader.rs  texture.rs  uniform.rs  vertex.rs  window_state.rs
crates/render/src/scheduled_pipeline/: binding.rs  buffer.rs  name.rs
engine_core/: Cargo.toml
engine_core/src/: app.rs  entity.rs  lib.rs  query.rs  scene.rs  schedule.rs  spawner.rs  system.rs  thread.rs
engine_core/src/concur/: llqueue.rs  mod.rs
engine_core/src/input/: keys.rs
engine_core/src/render_core/: buffer_pointer.rs  layout.rs  mod.rs  shader_node.rs
examples/: hello_world.rs  main.rs  rotating_triangle.rs  tic_tac_toe.rs  triangle.rs
examples/snow/: mod.rs  snow_mesh.rs
examples/waves/: comps.rs  mod.rs
frosty_alloc/: Cargo.toml
frosty_alloc/src/: access.rs  allocator.rs  chunk.rs  frosty_box.rs  handle.rs  interim.rs  lib.rs  system.rs
render/: Cargo.toml
render/src/: camera.rs  gui_mesh.rs  lib.rs  mesh.rs  post_process.rs  shader.rs  vertex.rs  window_state.rs
src/: lib.rs  main.rs
