[workspace]
resolver = "2"
members = ["engine_core", "frosty_alloc", "render"]

[package]
name = "frosty_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[workspace.dependencies]
hashbrown = "*"

[dependencies]
engine_core = { path = "engine_core" }
frosty_alloc = { path = "frosty_alloc" }
render = { path = "render" }
