[package]
name = "frosty_engine"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["basic_3d", "engine_core", "frosty_alloc", "render"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[workspace.dependencies]
hashbrown = "*"

[dependencies]
basic_3d = { path = "basic_3d" }
engine_core = { path = "engine_core" }
frosty_alloc = { path = "frosty_alloc" }
render = { path = "render" }

[dev-dependencies]
env_logger = "*"
pollster = "*"
cgmath = "*"
bytemuck = "*"

[features]
no-app = []
no-system = ["no-app"]
