[package]
name = "frosty_engine"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["crates/*"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[workspace.dependencies]
hashbrown = "*"

[dependencies]
basic_3d = { path = "crates/basic_3d" }
engine_core = { path = "crates/engine_core" }
frosty_alloc = { path = "crates/frosty_alloc" }
render = { path = "crates/render" }

[dev-dependencies]
env_logger = "*"
pollster = "*"
cgmath = "*"
bytemuck = "*"

[features]
no-app = []
no-system = ["no-app"]
