[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"
winit = "0.29.*"
wgpu = "0.19.*"
bytemuck = { version = "1.12", features = ["derive"] }
uuid = { version = "*", features = ["v4"] }

# async
pollster = "*"

# better hashmaps
hashbrown = { workspace = true }

# 3d things
cgmath = "*"
tobj = "*"

# time
instant = "*"
